force-app/main/default/objects/ATS_Rule__mdt/ATS_Rule__mdt.object-meta.xml
<CustomObject>
    <label>ATS Rule</label>
    <pluralLabel>ATS Rules</pluralLabel>
</CustomObject>