force-app/main/default/objects/ATS_Rule__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Rule Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Formatting</fullName>
                <default>true</default>
                <label>Formatting</label>
            </value>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>Keywords</fullName>
            </value>
            <value>
                <fullName>Grammar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>