force-app/main/default/objects/ATS_Rule__mdt/fields/Guidance__c.field-meta.xml
<CustomField>
    <fullName>Guidance__c</fullName>
    <description>The &quot;Fix&quot; text shown to the user (e.g., &quot;Avoid tables&quot;).</description>
    <label>Guidance Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>