force-app/main/default/objects/ATS_Rule__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the analyzer should check this rule.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>