force-app/main/default/objects/ATS_Rule__mdt/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <description>How much to penalize the score if this rule is broken.</description>
    <label>Deduction Weight</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>